Bug 89957 - Spreadsheet crashes in 4.4.1.2 when inserting a column (OK in 4.4.1.1)
Summary: Spreadsheet crashes in 4.4.1.2 when inserting a column (OK in 4.4.1.1)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.4.1.2 release
Hardware: All All
: medium normal
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:4.4.4 target:5.3.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2015-03-11 16:40 UTC by David Lynch
Modified: 2016-11-09 17:48 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Spreadsheet exhibiting bug (723.62 KB, application/vnd.oasis.opendocument.spreadsheet)
2015-03-11 16:40 UTC, David Lynch
Details
Spreadsheet crashing in 4.4.4.3 (1.12 MB, application/vnd.oasis.opendocument.spreadsheet)
2015-07-13 09:33 UTC, David Lynch
Details
Spreadsheet exhibiting crash when altering cell fq.an1 (1.15 MB, application/vnd.oasis.opendocument.spreadsheet)
2015-07-20 10:14 UTC, David Lynch
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David Lynch 2015-03-11 16:40:00 UTC
Created attachment 114042 [details]
Spreadsheet exhibiting bug

I upgraded from 4.4.1.1 to 4.4.1.2 this week (on Windows 8.1).

I have a fairly complex spreadsheet that worked well on 4.4.1.1. I hadn't changed it for several weeks.

In 4.4.1.2:

Whenever I try to add a column in sheet w (eg between G and H), Calc crashes with an "unexpected error" (no further detail). I can recover the file and usually a second attempt at adding a column works.

Some formulae involving names give incorrect results (eg many cells in sheet a, a.EN2:EP513 contain "Error: No result"). If I rewrite them
using A1:B2 notation they work.

It is significantly slower.

I have tried a new user profile and increasing the memory allocated, with no change in behaviour.

Spreadsheet attached.
Comment 1 A (Andy) 2015-03-11 20:51:00 UTC
Reproducible with LO 4.4.1.2, Win 8.1, increased the importance due to crash of CALC
Comment 2 David Lynch 2015-04-02 20:01:16 UTC
I have now had recovery fail after LO crashes. The message is "Unknown SEH exception"
Comment 3 David Lynch 2015-04-07 21:29:25 UTC
Bug still present in 4.4.2
Comment 4 Matthew Francis 2015-04-12 01:05:30 UTC
This seems to have begun at the below commit (on master, and the equivalent on the 4.4 stable branch).
Adding Cc: to erack@redhat.com; Could you possibly take a look at this one? Thanks

    source-hash-47230a036fe35b9a7a7c0609232849fcbb51efcc
    
    commit 47230a036fe35b9a7a7c0609232849fcbb51efcc
    Author:     Eike Rathke <erack@redhat.com>
    AuthorDate: Thu Feb 5 11:32:13 2015 +0100
    Commit:     Eike Rathke <erack@redhat.com>
    CommitDate: Thu Feb 5 11:52:51 2015 +0100
    
        Resolves: tdf#88792 do not hold a ScFormulaCell** in group area listener
    
        ... as the mdds storage segment may change when a formula cell is
        inserted at a position such that two segments are merged into a new one.
    
        Change-Id: I449a89005418aff7ea12099ea931b786959dbc3b
Comment 5 Eike Rathke (retired, only occasionally showing up) 2015-04-14 13:56:30 UTC
That is odd, I would had expected it would crash without that commit ...
I could reproduce a crash in master dbgutil on Linux. Taking.
Comment 6 Eike Rathke (retired, only occasionally showing up) 2015-04-15 18:48:33 UTC
Commit notification doesn't work.. I committed a workaround (not a real fix) to master to prevent the crash, http://cgit.freedesktop.org/libreoffice/core/commit/?id=cff5ee864b2d87d74079697425d7895dbf1b2ba4

Pending review for 4-4 at https://gerrit.libreoffice.org/15331
Comment 7 Commit Notification 2015-04-21 13:08:30 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5c6f7f0920a91c974e9639f2c751582c8f140b2b&h=libreoffice-4-4

tdf#89957 prevent crash, not really fixed

It will be available in 4.4.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 David Lynch 2015-06-05 22:46:51 UTC
It crashes in 4.4.3.2.  The message is "Unknown SEH exception".
Comment 9 CassieLX 2015-07-04 09:10:16 UTC
Could not reproduce in LO4.4.4.3 anymore. Seems to be fixed. (Kubuntu 14.04 LTS 64-Bit)
Comment 10 David Lynch 2015-07-04 17:30:17 UTC
I confirm Papamatti's finding that the bug seems to have been resolved.

In addition:

 the spreadsheet runs faster, at least twice as fast. 
 intermittently, I was having to [CNTL][Shift][F9] to get a result in a cell, this also seems to have been solved.

Many thanks to those that solved this. For the last three months or so, it has taken me about quarter of an hour to add a column to my application.
Comment 11 Eike Rathke (retired, only occasionally showing up) 2015-07-06 22:04:56 UTC
Please don't set this bug to resolved fixed, it is not, only the crash is prevented, the underlying cause is not fixed. Thank you.
Comment 12 David Lynch 2015-07-13 09:33:34 UTC
Created attachment 117199 [details]
Spreadsheet crashing in 4.4.4.3
Comment 13 David Lynch 2015-07-13 09:36:13 UTC
My spreadsheet has crashed, copy attached. No error message other than "unexpected error".

It has crashed only once in 4.4.4.3. It did so frequently in 4.4.4.2.
Comment 14 Eike Rathke (retired, only occasionally showing up) 2015-07-13 13:12:34 UTC
@David:
Crashed when doing what when where?
Comment 15 David Lynch 2015-07-13 18:14:38 UTC
Entering a formula in an existing cell, I think =LEFT(A2)="*" in w.Q2

I had this behaviour frequently some time ago, ie crash from entering a formula in an existing cell, but recently only adding a new column caused a crash.
Comment 16 David Lynch 2015-07-20 10:13:10 UTC
I am now getting a crash consistently when I try to enter the string "nw cell" into cell fq.an1

Usually it just crashes with no message. Once it hung, and once it gave the error message "SEH exception: ACCESS VIOLATION"

I attach the spreadsheet exhibiting this behaviour. 

Version: 4.4.4.3
Build ID: 2c39ebcf046445232b798108aa8a7e7d89552ea8
Locale: en_GB

Windows 8.1
Comment 17 David Lynch 2015-07-20 10:14:49 UTC
Created attachment 117336 [details]
Spreadsheet exhibiting crash when altering cell fq.an1
Comment 18 Eike Rathke (retired, only occasionally showing up) 2015-07-21 09:53:16 UTC
(In reply to David Lynch from comment #15)
> Entering a formula in an existing cell, I think =LEFT(A2)="*" in w.Q2

Can't reproduce, doesn't crash for me.


(In reply to David Lynch from comment #17)
> Created attachment 117336 [details]
> Spreadsheet exhibiting crash when altering cell fq.an1

Can't reproduce, doesn't crash for me.

And please, this is not a general "this crashes" bug. It is for one specific problem.
Comment 19 Timur 2015-10-29 11:57:05 UTC
Attachment 114042 [details] cannot be open at all from 4.4.6 (nor in master), probably a problem with some backport. 
Before opening a new bug, I ask if it makes sense due to this one unresolved.
Comment 20 Eike Rathke (retired, only occasionally showing up) 2015-10-29 17:06:35 UTC
Different problem, so I opened bug 95419 for that.
Comment 21 Robinson Tryon (qubit) 2015-12-14 04:48:21 UTC Comment hidden (obsolete)
Comment 22 Markus Mohrhard 2016-04-15 13:36:27 UTC
@Eike: is this fixed?
Comment 23 Eike Rathke (retired, only occasionally showing up) 2016-04-15 15:16:17 UTC
It's only workarounded.. the actual cause is yet to be determined and eliminated.
Comment 24 Eike Rathke (retired, only occasionally showing up) 2016-08-11 14:39:28 UTC
Lowering importance as the actual crash is fixed, still keeping assigned though as an "investigate again if time" reminder.
Comment 25 Xisco Faulí 2016-09-26 15:54:02 UTC
Adding Cc: to Eike Rathke
Comment 26 Commit Notification 2016-11-09 17:47:38 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6699afb43bffb9148960cbee2013d1704e462b9e

assert a supposed-to-be-fixed condition, tdf#89957 related

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.