tdf#89957 prevent crash, not really fixed

See source code comment.

(cherry picked from commit cff5ee864b2d87d74079697425d7895dbf1b2ba4)

more SAL_INFO sc.core.grouparealistener

(cherry picked from commit b03563571fb922636635ea72f2dbda18d736ff89)

Conflicts:
	sc/source/core/tool/grouparealistener.cxx

a3c75e626edee3ad28ad5b7eb80f729ae8aaa83f

Change-Id: I3ab7ab6aec1d782de0733064fea031c895f28965
Reviewed-on: https://gerrit.libreoffice.org/15331
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>